modify loading wrapper, add translations and colors

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,5 +20,6 @@
     "subtitle": "Are you sure you want to leave of the app?",
     "cancel": "Cancel",
     "ok": "Yes"
-  }
+  },
+  "loading": "...loading"
 }
