--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -20,5 +20,6 @@
     "subtitle": "¿Seguro quieres salir de la applicación?",
     "cancel": "Cancelar",
     "ok": "Si"
-  }
+  },
+  "loading": "...cargando"
 }
