add inputToggle component

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -25,5 +25,7 @@
     "cancel": "Cancelar",
     "ok": "Si"
   },
-  "loading": "...cargando"
+  "loading": "...cargando",
+  "yes": "SI",
+  "not": "NO"
 }
