change withLoading -> LoadingWrapper

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -29,7 +29,7 @@
     "cancel": "Cancelar",
     "ok": "Si"
   },
-  "loading": "...cargando",
+  "loading": "Esperando",
   "yes": "SI",
   "not": "NO",
   "do_not_know": "NO SÉ"
