add min max label and title in blood pressure meassuring

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "button": {
-    "next": "next"
+    "next": "next",
+    "save": "save"
   },
   "blood_pressure": "Blood Pressure",
   "login_screen": {
