--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,6 +1,7 @@
 {
   "button": {
-    "next": "siguiente"
+    "next": "siguiente",
+    "save": "guardar"
   },
   "blood_pressure": "Presion Arterial",
   "login_screen": {
