WIP blood pressure record v2

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,8 @@
 {
   "button": {
     "next": "next",
-    "save": "save"
+    "save": "save",
+    "confirm": "confirm"
   },
   "blood_pressure": "Blood Pressure",
   "login_screen": {
