--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -5,23 +5,30 @@
     "confirm": "confirmar",
     "finish": "finalizar"
   },
+  "verify_phone": {
+    "title": "Verficación",
+    "subtitle": "Ingresa el código de 6 digitos que te enviamos al numero de celular %{phone}",
+    "no_code": "¿No recibiste el código?",
+    "resend": "Reenviar en %{time}"
+  },
   "login_screen": {
-    "title": "Inicia sesión ingresando tu numero de celular",
+    "title": "Iniciar sesión",
+    "subtitle": "Ingresa con tu número de celular",
     "not_account": "¿No tienes una cuenta?",
     "singup": "Registrarme"
   },
-  "singup_screen":{
+  "singup_screen": {
     "full_name": "Nombre completo",
     "phone_number": "Numero de celuar",
     "address": "Dirección de donde vives",
     "all_ready_account": "¿Ya tienes una cuenta?",
     "log_in": "Iniciar sesión"
   },
-  "healt_info_screen":{
+  "healt_info_screen": {
     "title": "Información de Salud",
     "medicine": "¿Tomas medicamentos para la hipertensión?",
     "smoke": "¿Fumas actualmente o Fumabas?",
-    "heart_attack":"¿Has tenido infartos? (enfermedad coronaria)",
+    "heart_attack": "¿Has tenido infartos? (enfermedad coronaria)",
     "thrombosis": "¿Has tenido trombosis cerebral? (enfermedad cerebrovascular)",
     "nephropathy": "¿Tienes problemas renales? (enfermedad renal cronica)"
   },
@@ -31,13 +38,13 @@
     "cancel": "Cancelar",
     "ok": "Si"
   },
-  "wait1minute":{
+  "wait1minute": {
     "title": "Espera minimo 1 minuto y realiza una segunda medición",
     "description": "todo para que se realizan dos mediciones?",
     "remaining": "Espera",
     "seconds": "Segundos"
   },
-  "blood_pressure_finish":{
+  "blood_pressure_finish": {
     "title": "Resumen",
     "description": "Aqui puedes agregar informacion extra como sintomas o cualquier factor que pueda afectar la medición de la presión arterial"
   },
