delete unused screens and add title prop to HeightSlider

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -58,5 +58,6 @@
   "measuring": "Medición",
   "blood_pressure": "Presión Arterial",
   "heart_rate": "Ritmo cardiaco ",
-  "weight": "Peso"
+  "weight": "Peso",
+  "height": "Altura"
 }
