Squashed commit of the following:
commit edfc79d7ca7f6b146e84fc0a22ac450f446d9e6c
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Apr 27 16:02:17 2022 -0500

    fix app initial screen

commit f44ad4fe5aa0cdeb5a54d35e5fec59a925ea41fe
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Apr 27 15:59:27 2022 -0500

    final birthdate screen, add validations

commit a121b673b26cfc23d6f2d52d055a8b0255fec52a
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Apr 27 15:11:00 2022 -0500

    beta birthdate screen

commit 421ee4cc12215b1ac0424d19cae118132555077b
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Apr 27 11:32:39 2022 -0500

    replace avj by joi for validate forms

commit 6e4d6728ffaf0db5e98ef4e1dba67e05493a0a38
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Apr 27 10:08:52 2022 -0500

    init birthdate screen and add document id input in signup screen

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -21,10 +21,17 @@
     "title": "Registro",
     "subtitle": "Gracias por tomarte el tiempo de crear una cuenta con nosotros. Aquí empieza la parte divertida",
     "full_name": "Nombre completo",
-    "phone_number": "Numero de celuar",
-    "address": "Dirección de donde vives",
+    "document_id":"Número de identificación",
+    "document_id_hint": "cédula de ciudadania",
+    "phone_number": "Número de celular",
     "all_ready_account": "¿Ya tienes una cuenta?",
     "log_in": "Iniciar sesión"
+  },
+  "birthdate_screen":{
+    "title": "Residencia",
+    "birthdate": "Fecha de nacimiento",
+    "address": "Dirección de donde vives",
+    "address_hint": "Ej. dirección, ciudad, departamento"
   },
   "healt_info_screen": {
     "title": "Información de Salud",
@@ -59,5 +66,8 @@
   "blood_pressure": "Presión Arterial",
   "heart_rate": "Ritmo cardiaco ",
   "weight": "Peso",
-  "height": "Altura"
+  "height": "Altura",
+  "validation": {
+    "required": "Este campo debe ser completado"
+  }
 }
