Squashed commit of the following:
commit 671a15c6abe438ffc9b851191a4214283ea1214a
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun May 1 07:46:10 2022 -0500

    iOS stable version with 1 blocking bug and some visual bugs

commit 4294925d774d526d3403fd83a401f5fe6a0e6864
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 18:35:34 2022 -0500

    modify home screen

commit 7a5fa473fa0e0c6b4cfd0f2e393dce26422639f4
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 18:06:19 2022 -0500

    fix name screen HealthInfo

commit 9ba9ad1203c668caf3777ad2acf55ae9b8b49d61
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 17:47:30 2022 -0500

    add changes in selectUserType and set default addrees

commit e188430afbaadece67b86babc4cf3cc1002faae9
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 17:11:58 2022 -0500

    fixes in SwiperUnit component and changes in birthdate screen

commit 618be98119d20d300b59cc12f3e167829d9b1c02
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 16:27:49 2022 -0500

    fix headerSteps on iOS

commit ba98c056112e88f61640816c65cdd83a730bfadd
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 13:21:13 2022 -0500

    adapt birthdate singup screen to ios

commit f05cda8c6e173a8f6bf9970d003cdc9c41e43010
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 11:20:31 2022 -0500

    config APNs and fix bug en verifyCodePhone

commit b0463246ffc799039b2cfa9a2ed146e65e4f4ec8
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Apr 28 19:52:15 2022 -0500

    setup ios firebase

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -3,7 +3,8 @@
     "next": "siguiente",
     "save": "guardar",
     "confirm": "confirmar",
-    "finish": "finalizar"
+    "finish": "finalizar",
+    "add": "agregar"
   },
   "verify_phone": {
     "title": "Verficación",
@@ -21,17 +22,20 @@
     "title": "Registro",
     "subtitle": "Gracias por tomarte el tiempo de crear una cuenta con nosotros. Aquí empieza la parte divertida",
     "full_name": "Nombre completo",
-    "document_id":"Número de identificación",
+    "document_id": "Número de identificación",
     "document_id_hint": "cédula de ciudadania",
     "phone_number": "Número de celular",
     "all_ready_account": "¿Ya tienes una cuenta?",
     "log_in": "Iniciar sesión"
   },
-  "birthdate_screen":{
-    "title": "Residencia",
+  "birthdate_screen": {
+    "title": "Cumpleaños",
     "birthdate": "Fecha de nacimiento",
     "address": "Dirección de donde vives",
     "address_hint": "Ej. dirección, ciudad, departamento"
+  },
+  "select_user": {
+    "title": "Tipo de usuario"
   },
   "healt_info_screen": {
     "title": "Información de Salud",
@@ -57,6 +61,11 @@
     "title": "Resumen",
     "description": "Aqui puedes agregar informacion extra como sintomas o cualquier factor que pueda afectar la medición de la presión arterial"
   },
+  "home": {
+    "user_greetings": "Hola,",
+    "mystatus": "Mi estado",
+    "medicines": "Medicamentos"
+  },
   "loading": "Esperando",
   "yes": "SI",
   "not": "NO",
@@ -69,5 +78,9 @@
   "height": "Altura",
   "validation": {
     "required": "Este campo debe ser completado"
+  },
+  "user_type": {
+    "health": "Profesional en Salud",
+    "patient": "Paciente"
   }
 }
