Squashed commit of the following:
commit f0bbe8fa92764b1aa939af0a980bba922940e8b9
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu May 12 16:20:26 2022 -0500

    refactor home/bloodpressure screen

commit 90c71258ae0fc880b18286a40398042ad741d27b
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 11 17:40:10 2022 -0500

    add actionSheet

commit 7f8d89e10986f3dc37bc3f6426813649ec16bdbd
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 11 16:40:23 2022 -0500

    create title screen component

commit c0255573115ff2884fa0671c6dcfe0d2eaa93803
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 11 15:24:20 2022 -0500

    refactor router, delete deprecated file and add onPress action in HeaderChart component

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -66,6 +66,17 @@
     "mystatus": "Mi estado",
     "medicines": "Medicamentos"
   },
+  "home/BloodPressure": {
+    "title": "Presión Arterial",
+    "sub_title": "Estadística por %{time}",
+    "action_sheet": {
+      "take_bp": "Registrar presión arterial",
+      "tensiometer":"Validar tensiómetro",
+      "reminders": "Recordatorios"
+    },
+    "sys": "Sistólica",
+    "dia": "Diastólica"
+  },
   "loading": "Esperando",
   "yes": "SI",
   "not": "NO",
@@ -82,5 +93,7 @@
   "user_type": {
     "health": "Profesional en Salud",
     "patient": "Paciente"
-  }
+  },
+  "week": "semana",
+  "day": "dia"
 }
