Squashed commit of the following:
commit 7fbce6e1ff5a7db9faffa7569ad53525e15d1a74
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 20:30:48 2022 -0500

    add custom hook

commit 0b777e7805c2da64adcf2faf64bac2e3ac120a69
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 19:57:23 2022 -0500

    updgrade firebase lib, create usePermissions hook

commit 47315a1a1be0d79c9a0ed71d70c8d5c982e8a477
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 17:32:17 2022 -0500

    add notificiationservice

commit c839666413bd66e5fbe99b8eec2d8910a989dad3
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 15:52:08 2022 -0500

    config icon notification android

commit babcb702ba9ab3ea30870ae71414d0b0dd1f5195
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 15:25:46 2022 -0500

    add notifee

commit 9ada04437ed95536798b47d1fadeba40cc56d336
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 13:25:30 2022 -0500

    add reducers and selectors in blood-pressure slice

commit 859f736447d24119df8d8d46bdf39628df02d316
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 12:00:30 2022 -0500

    add datatimepicker

commit 21e8ceabd4840eb902fc3059482612f8007901f6
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 11:12:15 2022 -0500

    add new font to android and create reminder blood pressure screen

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -66,7 +66,7 @@
     "mystatus": "Mi estado",
     "medicines": "Medicamentos"
   },
-  "home/BloodPressure": {
+  "Home/BloodPressure": {
     "title": "Presión Arterial",
     "sub_title": "Estadística por %{time}",
     "action_sheet": {
@@ -76,6 +76,18 @@
     },
     "sys": "Sistólica",
     "dia": "Diastólica"
+  },
+  "BloodPressure/Reminders": {
+    "title": "Recordatorios",
+    "subtitle": "Recibe recordatorios para medir la presión arterial y registrar los resultados",
+    "normal": "Normal",
+    "normal_description": "Una vez a la semana después de levantarme",
+    "hypertension_1": "Hipertensión arterial grado 1",
+    "hypertension_1_description": "3 días a la semana después de levantarme y antes de acostarme",
+    "hypertension_2": "Hipertensión arterial grado 2",
+    "hypertension_2_description": "Todos los días después de levantarme, después de almuerzo y antes de dormir",
+    "custom": "Personalizar",
+    "custom_description":"Define la hora y la frecuencia"
   },
   "loading": "Esperando",
   "yes": "SI",
@@ -95,5 +107,7 @@
     "patient": "Paciente"
   },
   "week": "semana",
-  "day": "dia"
+  "day": "dia",
+  "reminder_to": "Recordatorio(%{time})  a las ",
+  "repeat": "Repetir"
 }
