Squashed commit of the following:
commit 1cf845e84c8d690d3f0c76db7509187990a4906f
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 18 10:01:12 2022 -0500

    add translations and improve notification service

commit 368348e46f3b75786b030bc9b727770b84f4a068
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Tue May 17 20:43:48 2022 -0500

    refactor signup user flow

commit ed85a19c2edbee3007dfa79ae4d281a74ac3476c
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat May 14 21:57:35 2022 -0500

    fix birdatescreen

commit ddf4bce0ce0a99fb7437651eff2a2841f9b91d9c
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat May 14 21:38:06 2022 -0500

    add toask component

commit 5016a9a300877c283457e31ae9e0f9fc5b8fca35
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat May 14 20:53:31 2022 -0500

    refactor, add middleware on axios, create thunk function

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -90,10 +90,11 @@
     "custom_description": "Define la hora y la frecuencia"
   },
   "notifications": {
-    "bloodPressure": {
+    "blood_pressure": {
       "title": "%{name} es hora de medir la presión arterial!",
       "body": "Presiona para iniciar el procedimiento.",
-      "channel": "Presión arterial"
+      "channel": "Presión arterial",
+      "android_channel_description": "Canal para recordarte realizar las mediciones de presión arterial"
     }
   },
   "loading": "Esperando",
