Squashed commit of the following:
commit 631732780d8e408cccc3185bb858a23179c890d5
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu May 19 22:40:47 2022 -0500

    WIP blood-pressure-thunk create notification

commit 2cd562a4089f59c8c3e3988d86a1e72a91bfacd7
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu May 19 20:19:01 2022 -0500

    change button ui

commit 18b91b098e4b5346b1a9c95ab21a617fd1a4c9f2
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu May 19 19:25:40 2022 -0500

    add group days support

commit 1c3a01bdcc8c7fb317af9399c9f75e6b2092ab87
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu May 19 18:32:02 2022 -0500

    add select multiple on actionsheet weekdays

commit 18c6f331a053d76a307b45a35f80d609f2a90acf
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu May 19 16:55:20 2022 -0500

    create actionsheetWeekdays

commit ced370c5c228adfac1d589d9c13ab625c1936026
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu May 19 11:19:05 2022 -0500

    delete unused files

commit 090ce89e744483ce45fcdb0ef08eaa0db5c23393
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu May 19 10:28:54 2022 -0500

    refactor init app flow

commit 097f70bfa4dc07230d751fadf42722f8388c831a
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu May 19 07:26:38 2022 -0500

    WIP initialize app flow

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,11 +1,4 @@
 {
-  "button": {
-    "next": "siguiente",
-    "save": "guardar",
-    "confirm": "confirmar",
-    "finish": "finalizar",
-    "add": "agregar"
-  },
   "verify_phone": {
     "title": "Verficación",
     "subtitle": "Ingresa el código de 6 digitos que te enviamos al numero de celular %{phone}",
@@ -91,11 +84,20 @@
   },
   "notifications": {
     "blood_pressure": {
-      "title": "%{name} es hora de medir la presión arterial!",
+      "title": "%{name} es hora de medir la presión arterial",
       "body": "Presiona para iniciar el procedimiento.",
       "channel": "Presión arterial",
       "android_channel_description": "Canal para recordarte realizar las mediciones de presión arterial"
     }
+  },
+  "days": {
+    "monday": "Lunes",
+    "tuesday": "Martes",
+    "wednesday": "Miércoles",
+    "thursday": "Jueves",
+    "friday": "Viernes",
+    "saturday": "Sábado",
+    "sunday": "Domingo"
   },
   "loading": "Esperando",
   "yes": "SI",
@@ -117,5 +119,14 @@
   "week": "semana",
   "day": "dia",
   "reminder_to": "Recordatorio(%{time})  a las ",
-  "repeat": "Repetir"
+  "repeat": "Repetir",
+  "button": {
+    "next": "siguiente",
+    "save": "guardar",
+    "confirm": "confirmar",
+    "finish": "finalizar",
+    "add": "agregar",
+    "cancel": "cancelar"
+  },
+  "select": "Seleccionar"
 }
