--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -139,5 +139,5 @@
   "use": "Uso",
   "validationStudy": "Estudio de Validación",
   "measurementMethod": "Método de medición",
-  "additional": "adicional",
+  "additional": "adicional"
 }
