Squashed commit of the following:
commit 387c6911247de2f942a8b6764bd4c01ed6943681
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 25 13:03:56 2022 -0500

    add crashlytics to track errors in the trigger to remain blood pressure

commit 7c98c0525108c957e65fab807ce22b2fed9580b7
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 25 12:23:20 2022 -0500

    improve ErrorBoundary for crash errors

commit de30bf21fdcc2cd6fdbdccb6d7ddacf649e7c635
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 25 11:27:00 2022 -0500

    change productId to com.rambit.bettion

commit 2b6f4a1c82c60f0dd198bb30694c1d3f86c71192
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 25 11:11:48 2022 -0500

    add appErrorBoundary

commit d93d516b7b87ad93919e549c517383a9bbf9b91a
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon May 23 20:52:11 2022 -0500

    setup initial crashltics library to report errors

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -13,7 +13,7 @@
   },
   "singup_screen": {
     "title": "Registro",
-    "subtitle": "Gracias por tomarte el tiempo de crear una cuenta con nosotros. Aquí empieza la parte divertida",
+    "subtitle": "Gracias por tomarte el tiempo de crear una cuenta con nosotros.",
     "full_name": "Nombre completo",
     "document_id": "Número de identificación",
     "document_id_hint": "cédula de ciudadania",
@@ -139,5 +139,10 @@
   "use": "Uso",
   "validationStudy": "Estudio de Validación",
   "measurementMethod": "Método de medición",
-  "additional": "adicional"
+  "additional": "adicional",
+  "appCrash": {
+    "title": "¡Ooh no! Algo salió Mal.",
+    "bodyText": "La aplicación tuvo un problema y no pudo continuar. ¡Nos disculpamos por cualquier inconveniente que esto haya causado!. Presiona el botón de abajo para reiniciar la aplicación. Contacta con nosotros si este problema persiste",
+    "buttonText": "Regresar a la pantalla de inicio"
+  }
 }
