--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,14 +6,14 @@
     "resend": "Reenviar en %{time}"
   },
   "login_screen": {
-    "title": "Sign in by entering your mobile number",
+    "title": "Log in",
     "subtitle": "Ingresa con tu número de celular",
     "not_account": "Do not have an account?",
     "singup": "Singup"
   },
   "singup_screen": {
     "title": "Registro",
-    "subtitle": "Gracias por tomarte el tiempo de crear una cuenta con nosotros. Aquí empieza la parte divertida",
+    "subtitle": "Gracias por tomarte el tiempo de crear una cuenta con nosotros.",
     "full_name": "Nombre completo",
     "document_id": "Número de identificación",
     "document_id_hint": "cédula de ciudadania",
@@ -132,5 +132,10 @@
   "headerSearch": {
     "placeholder": "Buscar tensiometro",
     "cancel": "cancelar"
+  },
+  "appCrash": {
+    "title": "!Oh no¡, Something Went Wrong",
+    "bodyText": "The app ran into a problem and could not continue. We aplologise foy any inconvenience this has caused! Press the button below to restart the app. Please contact us if this issue persists",
+    "buttonText": "Back to Home screen"
   }
 }
