add useTimer hook and implement in blood pressure > preparation and steps and modify stepsHeader component

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -141,7 +141,9 @@
     "confirm": "confirmar",
     "finish": "finalizar",
     "add": "agregar",
-    "cancel": "cancelar"
+    "cancel": "cancelar",
+    "nextin": "siguiente en (%{countDown})",
+    "start": "Empezar"
   },
   "select": "Seleccionar",
   "headerSearch": {
